--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <div id="Complete Model" class="tabcontent">
         <h3>Complete Model</h3>
-        <iframe src="https://jritchie.shinyapps.io/covid_interventions/" width="100%" height="1000px" onload="resizeIframe(this)"></iframe>
+        <iframe src="https://jritchie.shinyapps.io/covid_interventions/" width="100%" height="1300px"></iframe>
       </div>
     </div>
 
@@ -48,11 +48,6 @@
         }
         document.getElementById(cityName).style.display = "block";
         document.getElementById(buttonId).className += " active";
-      }
-
-      // from https://stackoverflow.com/questions/9162933/make-iframe-height-dynamic-based-on-content-inside-jquery-javascript
-      function resizeIframe(iframe) {
-          iframe.height = (iframe.contentWindow.document.body.scrollHeight + 500) + "px";
       }
 
       openTab('model-button', 'Complete Model')
