--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div class="tab">
         <button class="tablinks" id="intro-button" onclick="openTab('intro-button', 'Intro')">Introduction</button>
         <button class="tablinks" id="model-button" onclick="openTab('model-button', 'Complete Model')">Complete Model</button>
+        <button class="tablinks" id="details-button" onclick="openTab('details-button', 'Model Details')">Model Details</button>
       </div>
 
       <div id="Intro" class="tabcontent">
@@ -31,7 +32,13 @@
 
       <div id="Complete Model" class="tabcontent">
         <h3>Complete Model</h3>
-        <iframe src="https://jritchie.shinyapps.io/covid_interventions/" width="100%" height="1300px"></iframe>
+        <iframe src="https://morganpkain.shinyapps.io/covid/" width="100%" height="1300px"></iframe>
+      </div>
+  
+      <div id="Model Details" class="tabcontent">
+          <h3>Model Details</h3>
+          <iframe src="model_update.pdf" width="100%" height="1300px"></iframe>
+        </div>
       </div>
     </div>
 
