--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       openTab('intro-button', 'Intro')
     </script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script type="text/javascript" src="lib/noframework.waypoints.js"></script>
+    <!--<script type="text/javascript" src="lib/noframework.waypoints.js"></script>-->
     <script type="text/javascript" src="graphs.js"></script>
      
   </body>
