fix Morgan name typo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         complete model</b>.
       </p>
       <h5>
-        Team: Marissa Childs, Morgain Kain, Devin Kirk, Mallory Harris, Jacob Ritchie, Lisa Couper, Isabel Delwel, Nicole Nova, Erin Mordecai
+        Team: Marissa Childs, Morgan Kain, Devin Kirk, Mallory Harris, Jacob Ritchie, Lisa Couper, Isabel Delwel, Nicole Nova, Erin Mordecai
       </h5>
 
       <div class="tab">
