--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="container" id="container">
       <h2>Long-term mitigation of COVID-19</h2>
       <p>
-        How will COVID-19 evolve over the first 18 months of the pandemic? 
+        How will COVID-19 develop over the first 18 months of the pandemic? We have developed a compartmental model of COVID-19 to evaluate possible outcomes of control efforts through non-pharmaceutical interventions such as social distancing.
       </p>
       <p>
-        Look at our <b class="text-link" onclick="openTab('intro-button', 'Intro')">intro</b> below, 
+        Take a look at our <b class="text-link" onclick="openTab('intro-button', 'Intro')">intro</b> below, 
         or skip directly to our <b class="text-link" onclick="openTab('model-button', 'Complete Model')">
-        complete model</b>.
+        complete model</b> or an overview of <b class="text-link" onclick="openTab('details-button', 'Model Details')">model details</b>.
       </p>
       <h5>
         Team: Marissa Childs, Morgan Kain, Devin Kirk, Mallory Harris, Jacob Ritchie, Lisa Couper, Isabel Delwel, Nicole Nova, Erin Mordecai
@@ -30,13 +30,13 @@
 
       <div id="Intro" class="tabcontent text-tab">
         <h4 id='basic-waypoint'>Flatten the Curve</h4>
-        <p>By now, you've probably already seen a diagram like this. One of the most important steps we can all take right now is practicing <b class="sd-highlight">social distancing</b>. By cutting down on the number of people we interact with, we can slow down the spread of COVID-19. </p>
+        <p>By now, you've probably already seen a diagram like this. One of the most important steps we can all take right now is practicing <b class="sd-highlight">social distancing</b>. By cutting down on the number of people we interact with, we can slow down the spread of COVID-19. Here's a hypothetical scenario where a COVID-19 outbreak begins on Jan 15, and spreads for a month before we begin social distancing. </p>
 
         <svg id="chart_1"></svg>
 
         <svg id="chart_2"></svg>
 
-        <p>Many of our health resources have a fixed capacity. If we have too many cases at a time, we simply won't be able to take care of everyone who gets sick. Hospitalizations above our limit will mean making hard decisions about which patients to prioritize. Some people may not be able to receive care. We are already seeing this scenario play out in places like Italy. The more social distancing we practice, the flatter the curve will be. </p>
+        <p>Many of our health resources have a fixed capacity (for example, Santa Clara County can handle roughly 4500 COVID-19 hospitalizations at a time). If we have too many cases at a time, we simply won't be able to take care of everyone who gets sick. Hospitalizations above our limit will mean making hard decisions about which patients to prioritize. Some people may not be able to receive care. We are already seeing this scenario play out in places like Italy. The more social distancing we practice, the flatter the curve will be. </p>
         
         <h4>Delay the Peak</h4>
 
