make requested formatting changes

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
       <div id="Intro" class="tabcontent text-tab">
         <h4 id='basic-waypoint'>Flatten the Curve</h4>
-        <p>By now, you've probably already seen a diagram like this. One of the most important steps we can all take right now is practicing <b class="sd-highlight">social distancing</b>. By cutting down on the number of people we interact with, we can slow down the spread of COVID-19. Here's a hypothetical scenario where a COVID-19 outbreak begins on Jan 15, and spreads for a month before we begin social distancing. </p>
+        <p>By now, you've probably already seen a diagram like this. One of the most important steps we can all take right now is practicing <b class="sd-highlight">social distancing</b>. By cutting down on the number of people we interact with, we can slow down the spread of COVID-19. Here's a hypothetical scenario where a COVID-19 outbreak begins on Jan 15, and spreads for 50 days before we begin social distancing. </p>
 
         <svg id="chart_1"></svg>
 
         <svg id="chart_2"></svg>
 
-        <p>Many of our health resources have a fixed capacity (for example, Santa Clara County can handle roughly 4500 COVID-19 hospitalizations at a time). If we have too many cases at a time, we simply won't be able to take care of everyone who gets sick. Hospitalizations above our limit will mean making hard decisions about which patients to prioritize. Some people may not be able to receive care. We are already seeing this scenario play out in places like Italy. The more social distancing we practice, the flatter the curve will be. </p>
+        <p>Many of our health resources have a fixed capacity (for example, Santa Clara County has roughly 4500 hospital beds). If we have too many cases at a time, we simply won't be able to take care of everyone who gets sick. Hospitalizations above our limit will mean making hard decisions about which patients to prioritize. Some people may not be able to receive care. We are already seeing this scenario play out in places like Italy. The more social distancing we practice, the flatter the curve will be. </p>
         
         <h4>Delay the Peak</h4>
 
@@ -63,7 +63,7 @@
 
         <p>This way, we can balance stopping the spread of COVID-19 and going about our normal lives.</p>
 
-        <p>We know this is an incredibly stressful and scary time for people around the world. There's a lot of uncertainty, but scientists, medical professionals, and leaders across industries are working together to help us find solutions. iIf we make decisions based on the best models we have, we can get through this crisis while protecting the most vulnerable and minimizing the impact on our lives and the economy.</p>
+        <p>We know this is an incredibly stressful and scary time for people around the world. There's a lot of uncertainty, but scientists, medical professionals, and leaders across industries are working together to help us find solutions. If we make decisions based on the best models we have, we can get through this crisis while protecting the most vulnerable and minimizing the impact on our lives and the economy.</p>
 
         <p>If you'd like, you can <b class="text-link" onclick="openTab('model-button', 'Complete Model')">play around with our model more here</b>. Test how interventions change based on start date and adding in quarantining of symptomatic people.</p>
       </div>
