--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <svg id="chart_2"></svg>
 
-        <p>Many of our health resources have a fixed capacity (for example, Santa Clara County has roughly 4500 hospital beds). If we have too many cases at a time, we simply won't be able to take care of everyone who gets sick. Hospitalizations above our limit will mean making hard decisions about which patients to prioritize. Some people may not be able to receive care. We are already seeing this scenario play out in places like Italy. The more social distancing we practice, the flatter the curve will be. </p>
+        <p>Many of our health resources have a fixed capacity. If we have too many cases at a time, we simply won't be able to take care of everyone who gets sick. Hospitalizations above our limit will mean making hard decisions about which patients to prioritize (for example, Santa Clara County has roughly 4500 hospital beds). Some people may not be able to receive care. We are already seeing this scenario play out in places like Italy. The more social distancing we practice, the flatter the curve will be. </p>
         
         <h4>Delay the Peak</h4>
 
