--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!-- using code from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs -->
   <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Potential Long-Term Intervention Strategies for COVID-19">
   <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
@@ -29,6 +30,8 @@
       </div>
 
       <div id="Intro" class="tabcontent text-tab">
+        <p class="text-link">Parameter values have been taken from previous work. However, because parameter values are likely to be variable across space and time, our results should not be interpreted as quantitive predictions for a given location. Our goal is to show, qualitatively, the robust result that a second peak is likely.</p>
+
         <h4 id='basic-waypoint'>Flatten the Curve</h4>
         <p>By now, you've probably already seen a diagram like this. One of the most important steps we can all take right now is practicing <b class="sd-highlight">social distancing</b>. By cutting down on the number of people we interact with, we can slow down the spread of COVID-19. Here's a hypothetical scenario where a COVID-19 outbreak begins on Jan 15, and spreads for 50 days before we begin social distancing. </p>
 
