--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Potential Long-Term Intervention Strategies for COVID-19">
+  <title>Potential Long-Term Intervention Strategies for COVID-19</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
