--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         interactive model</b> or an overview of <b class="text-link" onclick="openTab('details-button', 'Model Details')">model details</b>.
       </p>
       <p> 
-        <b class="text-link" onclick="openTab('santa-clara-button', 'Santa Clara')">NEW: See our model predictions for Santa Clara County.</b>
+        <b class="text-link" onclick="openTab('santa-clara-button', 'Santa Clara')">NEW: See our model predictions for Santa Clara County, California.</b>
       </p>
       <h5>
         Team: Marissa Childs, Morgan Kain, Devin Kirk, Mallory Harris, Jacob Ritchie, Lisa Couper, Isabel Delwel, Nicole Nova, Erin Mordecai
@@ -32,7 +32,7 @@
         <button class="tablinks" id="intro-button" onclick="openTab('intro-button', 'Intro')">Introduction</button>
         <button class="tablinks" id="model-button" onclick="openTab('model-button', 'Interactive Model')">Interactive Model</button>
         <button class="tablinks" id="details-button" onclick="openTab('details-button', 'Model Details')">Model Details</button>
-        <button class="tablinks" id="santa-clara-button" onclick="openTab('santa-clara-button', 'Santa Clara')">Santa Clara County</button>
+        <button class="tablinks" id="santa-clara-button" onclick="openTab('santa-clara-button', 'Santa Clara')">Santa Clara County, California</button>
       </div>
 
       <div id="Intro" class="tabcontent text-tab">
@@ -149,7 +149,7 @@
           
         </div>
         <div id="Santa Clara" class="tabcontent text-tab">
-          <h4 id='basic-waypoint'>Hospitalization Estimates for Santa Clara County</h4>
+          <h4 id='basic-waypoint'>Hospitalization Estimates for Santa Clara County, California</h4>
           <p>We estimate baseline transmission rate (beta<sub>0</sub> in our model) and R<sub>0</sub> for Santa Clara County, using local parameter values when possible, with the R package pomp (King et al. 2020). See "detailed methods" below for more information. This gives us a sense of how the virus would spread if we took no action.</p>
 
           <p>Generally, we attempt to capture the non-pharmaceutical interventions that have already happened in Santa Clara County. In early March, people began to change their behavior in response to the virus (for example, working from home, cancelling large social events). On March 17th, a shelter-in-place order began for the entire Bay Area.</p>
@@ -261,11 +261,11 @@
             </tr>
             <tr>
               <td class="tg-0lax">Relative infectiousness of asymptomatic infected individuals</td>
-              <td class="tg-0lax">03-Feb</td>
+              <td class="tg-0lax">2/3</td>
             </tr>
             <tr>
               <td class="tg-0lax">Proportion of infections that are asymptomatic</td>
-              <td class="tg-0lax">03-Jan</td>
+              <td class="tg-0lax">1/3</td>
             </tr>
             <tr>
               <td class="tg-0lax">Portion of symptomatic infections that require hospitalization</td>
@@ -293,7 +293,7 @@
             </tr>
             <tr>
               <td class="tg-0lax">Fatality rate among hospitalizations</td>
-              <td class="tg-0lax">05-Jan</td>
+              <td class="tg-0lax">1/5</td>
             </tr>
             <tr>
               <td class="tg-0lax">Time from hospitalization to recovery</td>
