--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           
         </div>
         <div id="Santa Clara" class="tabcontent text-tab">
-          <h4 id='basic-waypoint'>Hospitalization Estimates for Santa Clara County/h4>
+          <h4 id='basic-waypoint'>Hospitalization Estimates for Santa Clara County</h4>
           <p>We estimate baseline transmission rate (beta<sub>0</sub> in our model) and R<sub>0</sub> for Santa Clara County, California, using local parameter values when possible, with the R package pomp (King et al. 2020). See "detailed methods" below for more information. This gives us a sense of how the virus would spread if we took no action.</p>
 
           <p>Generally, we attempt to capture the non-pharmaceutical interventions that have already happened in Santa Clara County. In early March, people began to change their behavior in response to the virus (for example, working from home, cancelling large social events). On March 17th, a shelter-in-place order began for the entire Bay Area.</p>
