update estimates and figures'

--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
           <p>Generally, we attempt to capture the non-pharmaceutical interventions that have already happened in Santa Clara County. In early March, people began to change their behavior in response to the virus (for example, working from home, cancelling large social events). On March 17th, a shelter-in-place order began for the entire Bay Area.</p>
 
 
-          <p>Incorporating uncertainty in some parameters specific to the outbreak in Santa Clara County (but far from all of them), we estimate a median baseline transmission rate of 0.54 (0.43 - 0.70; 95% CI), which translates into an R<sub>0</sub> of 3.49 (2.82 - 4.60; 95% CI). Using these estimates for beta<sub>0</sub>, we find reducing the contact rate for the whole population by 72% (64% - 78%, 95% CI) brings R<sub>0</sub> below one, a basic threshold for getting transmission under control.</p>
+          <p>Incorporating uncertainty in some parameters specific to the outbreak in Santa Clara County (but far from all of them), we estimate a median baseline transmission rate of 0.52 (0.43 - 0.65; 95% CI), which translates into an R<sub>0</sub> of 3.39 (2.83 - 4.22; 95% CI). Using these estimates for beta<sub>0</sub>, we find reducing the contact rate for the whole population by 72% 71% (65% - 77%, 95% CI) brings R<sub>0</sub> below one, a basic threshold for getting transmission under control.</p>
 
           <img src="santa-clara-figures/histogram.png">
-          <p class="fig-caption">Figure 1: R<sub>0</sub> estimates for Santa Clara county assuming no social distancing (red) and very strong social distancing (shelter-in-place) that reduces contacts to 5%-30% of baseline (blue). We find that at the median estimated R<sub>0</sub>, a 72% reduction in contacts among all residents reduces the R<sub>0</sub> to one.</p>
+          <p class="fig-caption">Figure 1: R<sub>0</sub> estimates for Santa Clara county assuming no social distancing (red) and very strong social distancing (shelter-in-place) that reduces contacts to 5%-30% of baseline (blue). We find that at the median estimated R<sub>0</sub>, a 71% reduction in contacts among all residents reduces the R<sub>0</sub> to one.</p>
 
           <p>The contact rates we give should not be taken as exact guidelines at the personal level because we assume that all contacts have the same likelihood of transmission, which probably isn’t true (for example, people may be more likely to infect other people in their household compared to people they encounter at the grocery store). All of our estimates also assume that no infected individuals enter the county from other areas at any point in the study.</p>
 
-          <p>We note that with even strong social distancing (e.g at least 72% reduction in normal contacts), the epidemic will take a long time to end because of lags due to both intervention implementation and the duration of individual infections. Additionally, given that many interventions may bring R<sub>0</sub> just below one, cases decrease at a low rate because of the abundance of currently circulating cases and the long duration of individual COVID-19 infections. </p>
+          <p>We note that with even strong social distancing (e.g at least 71% reduction in normal contacts), the epidemic will take a long time to end because of lags due to both intervention implementation and the duration of individual infections. Additionally, given that many interventions may bring R<sub>0</sub> just below one, cases decrease at a low rate because of the abundance of currently circulating cases and the long duration of individual COVID-19 infections. </p>
 
           <p>Because of this, if a strong intervention is lifted too early, we still expect to see a second epidemic (although cases and hospitalizations may be reduced).</p>
 
@@ -212,7 +212,7 @@
 
           <p>We use data from The New York Times, based on reports from state and local health agencies. These data are available at <a href="https://github.com/nytimes/covid-19-data">https://github.com/nytimes/covid-19-data</a>. Daily deaths are calculated from differences in cumulative death reports. </p>
 
-          <img src="santa-clara-figures/model_fit.png">
+          <img src="santa-clara-figures/model_fit_Apr1.png">
           <p class='fig-caption' style="text-align: center;">Figure 5: Example showing simulation with 95% confidence interval (grey) from fitted model compared to data (red).</p> 
 
 
