--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>If we lift controls too quickly, we could see a resurgence, where cases pick back up quickly. In fact, if we completely stop practicing social distancing at almost any point in this model, we risk an epidemic that overwhelms hospital capacity. </p>
 
         <h4>The Lightswitch Method</h4> 
-        <p>We will probably have to stay careful for a long time after it seems like COVID-19 is gone in order to keep it under control. The best way to eradicae it, a vaccine, is likely twelve to eighteen away. That doesn't mean we will necessarily need to stay in our houses the whole time, though. </p>
+        <p>We will probably have to stay careful for a long time after it seems like COVID-19 is gone in order to keep it under control. The best way to eradicate it, a vaccine, is likely twelve to eighteen away. That doesn't mean we will necessarily need to stay in our houses the whole time, though. </p>
 
         <p>Experts have shown that we can keep transmission relatively low and avoid overwhelming our healthcare capacity if we use a <b class="ls-highlight">"lightswitch" approach</b>. When we're "on", we go back to social distancing and cases start to decrease. When we're "off" we can dial down social distancing and make smaller adjustments. Cases will start to increase slowly, but won't grow out of control before we switch social distancing back on. We could make our switches last a certain amount of time (e.g., three weeks on, three weeks off); or tie them to certain thresholds based on data (e.g., "on" when we pass 15 hospitalized cases in a week, "off" when we are below 2 hospitalized cases in a week).</p>
 
